cmake_minimum_required(VERSION 3.12)
project(project_7_part_1_sorted_vector_langefeld_robert_sauberman_ben_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(project_7_part_1_sorted_vector_langefeld_robert_sauberman_ben_2
        main.cpp
        Team.h
        Team.cpp
        SortedVector.cpp
        SortedVector.h)
